--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <meta name="description" content="Leading cloud platform strategy, migration, and modernization." />
   <meta name="theme-color" content="#0ea5e9" />
 
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/layout.css" />
   <link rel="stylesheet" href="css/components.css" />
   <link rel="stylesheet" href="css/utilities.css" />
 </head>
-
 <body>
   <a id="top" tabindex="-1"></a>
   <a href="#main" class="skip-link">Skip to main content</a>
 
-  <!-- HEADER -->
+  <!-- ===== HEADER ===== -->
   <header class="site-header" id="siteHeader">
     <div class="header-inner">
       <a id="homeLink" href="#top" class="brand home-link" aria-label="Go to top">
@@ -32,7 +33,7 @@
         <a href="#about">About</a>
         <a href="#expertise">Strategic Focus Areas</a>
         <a href="#work">Strategic Initiatives Led</a>
-        <a href="#blog">Insights & Thought Leadership</a>
+        <a href="#blog">Insights &amp; Thought Leadership</a>
         <a href="#contact">Contact</a>
       </nav>
       <div class="header-actions">
@@ -42,7 +43,7 @@
     </div>
   </header>
 
-  <!-- MOBILE MENU -->
+  <!-- ===== MOBILE MENU ===== -->
   <div class="mobile-menu" id="mobileMenu" hidden>
     <div class="mobile-menu-scrim" data-close="true" aria-hidden="true"></div>
     <aside class="mobile-panel" role="dialog" aria-modal="true" aria-labelledby="mobileMenuTitle">
@@ -60,19 +61,19 @@
         <a href="#about">About</a>
         <a href="#expertise">Strategic Focus Areas</a>
         <a href="#work">Strategic Initiatives Led</a>
-        <a href="#blog">Insights & Thought Leadership</a>
+        <a href="#blog">Insights &amp; Thought Leadership</a>
         <a href="#contact">Contact</a>
       </nav>
       <div class="mobile-cta">
-        <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">
-          <img class="li-icon" src="assets/images/in.webp" alt="" width="20" height="20" decoding="async" />
+        <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer" aria-label="Let’s Connect on LinkedIn">
+          <img class="li-icon" src="assets/images/in.webp" alt="" aria-hidden="true" width="20" height="20" decoding="async" />
           <span>Let’s Connect</span>
         </a>
       </div>
     </aside>
   </div>
 
-  <!-- MAIN CONTENT -->
+  <!-- ===== MAIN CONTENT ===== -->
   <main id="main" class="container">
 
     <!-- HERO -->
@@ -80,66 +81,88 @@
       <img src="assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" width="140" height="140" loading="lazy" decoding="async" />
       <div>
         <h1 id="name">Santhosh Kumar Chandrashekar</h1>
-        <p class="subtitle">TOGAF® Certified Architect<br />Cloud & DevOps Portfolio Strategy Leader</p>
-        <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value.</p>
+        <p class="subtitle">TOGAF® Certified Architect<br />Cloud &amp; DevOps Portfolio Strategy Leader</p>
+        <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value. With a blended foundation in enterprise architecture, solution architecture, platform engineering, and operations, I bring a holistic, outcome-driven approach to technology transformation, ensuring architectural decisions translate into real business impact.</p>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section id="about" aria-labelledby="about-title">
       <h2 id="about-title">About</h2>
-      <p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations.</p>
+      <p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. Today, I specialise in Cloud &amp; DevOps Portfolio Architecture within the Enterprise Architecture structure, focusing on target-state design, technology roadmapping, and platform strategies that reduce complexity and enable sustainable enterprise transformation.</p>
+      <p><strong><em>At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction.</em></strong></p>
+      <p>My goal is to design technology foundations and roadmaps that evolve with the organisation, support modern ways of working, and deliver long-term business value.</p>
     </section>
 
-    <!-- FOCUS AREAS (UNCHANGED) -->
+    <!-- STRATEGIC FOCUS AREAS -->
     <section id="expertise" class="focus-grid" aria-labelledby="expertise-title">
       <h2 id="expertise-title">Strategic Focus Areas</h2>
       <div class="grid">
-        <!-- Your existing cards remain here unchanged -->
+        <article class="card">
+          <img src="assets/images/focus-ea.webp" alt="Enterprise Architecture & Target-State Design" loading="lazy" decoding="async" />
+          <h3>Enterprise Architecture &amp; Target-State Design</h3>
+          <p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p>
+        </article>
+        <article class="card">
+          <img src="assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration & Modernisation" loading="lazy" decoding="async" />
+          <h3>Cloud Strategy, Migration &amp; Modernisation</h3>
+          <p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p>
+        </article>
+        <article class="card">
+          <img src="assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones & Platform Engineering" loading="lazy" decoding="async" />
+          <h3>Cloud Landing Zones &amp; Platform Engineering</h3>
+          <p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p>
+        </article>
+        <article class="card">
+          <img src="assets/images/focus-devsecops.webp" alt="DevSecOps & Delivery Enablement" loading="lazy" decoding="async" />
+          <h3>DevSecOps &amp; Delivery Enablement</h3>
+          <p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p>
+        </article>
+        <article class="card">
+          <img src="assets/images/focus-governance.webp" alt="Cloud Governance, Security & Compliance" loading="lazy" decoding="async" />
+          <h3>Cloud Governance, Security &amp; Compliance</h3>
+          <p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p>
+        </article>
+        <article class="card">
+          <img src="assets/images/focus-roadmapping.webp" alt="Technology Roadmapping & Portfolio Advisory" loading="lazy" decoding="async" />
+          <h3>Technology Roadmapping &amp; Portfolio Advisory</h3>
+          <p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p>
+        </article>
       </div>
     </section>
 
-    <!-- INITIATIVES (AUTO) -->
+    <!-- INITIATIVES AUTO -->
     <section id="work" class="case-grid-compact" aria-labelledby="work-title">
       <h2 id="work-title">Strategic Initiatives Led</h2>
       <p class="section-note">Selected initiatives — click a card for details.</p>
       <div class="grid" id="initiativesContainer"></div>
     </section>
 
-    <!-- INSIGHTS (AUTO) -->
+    <!-- INSIGHTS AUTO -->
     <section id="blog" class="insights-grid" aria-labelledby="blog-title">
-      <h2 id="blog-title">Insights & Thought Leadership</h2>
+      <h2 id="blog-title">Insights &amp; Thought Leadership</h2>
       <p class="section-note">Selected articles — click a card for details.</p>
       <div class="grid" id="articlesContainer"></div>
     </section>
 
     <!-- FOOTER -->
-    <footer id="contact" class="global-footer">
-      <h2 style="margin-top:0;">Contact</h2>
-
+    <footer id="contact" aria-labelledby="contact-title">
+      <h2 id="contact-title" style="margin-top:0;">Contact</h2>
       <p class="contact-cta">
         <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">
-          <img class="li-icon" src="assets/images/in.webp" alt="" width="20" height="20" />
+          <img class="li-icon" src="assets/images/in.webp" alt="" width="20" height="20" decoding="async" />
           <span>Let’s Connect</span>
         </a>
       </p>
-
-      <p class="contact-email">
-        <strong>Email:</strong>
-        <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
-      </p>
+      <p class="contact-email"><strong>Email:</strong> <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a></p>
 
       <hr style="margin:30px 0; opacity:0.2;">
-
       <p style="text-align:center; font-weight:600;">SANTHOSH KUMAR CHANDRASHEKAR</p>
-      <p style="text-align:center; font-size:13px; opacity:0.7;">
-        Cloud & DevOps Portfolio Architect • Enterprise Technology Leader
-      </p>
+      <p style="text-align:center; font-size:13px; opacity:0.7;">Cloud & DevOps Portfolio Architect • Enterprise Technology Leader</p>
     </footer>
-
   </main>
 
-  <!-- AUTO CONTENT LOADING -->
+  <!-- AUTO LOAD SCRIPTS -->
   <script>
   fetch('data/initiatives.json')
     .then(res => res.json())
@@ -150,11 +173,9 @@
         const card = document.createElement('a');
         card.className = 'case-link';
         card.href = item.url;
-        card.innerHTML = `
-          <h3 class="case-title">${item.title}</h3>
-          <p class="case-desc">${item.description}</p>
-          <span class="case-cta">More details →</span>
-        `;
+        card.innerHTML = `<h3 class="case-title">${item.title}</h3>
+                          <p class="case-desc">${item.description}</p>
+                          <span class="case-cta">More details →</span>`;
         container.appendChild(card);
       });
     });
@@ -168,11 +189,9 @@
         const card = document.createElement('a');
         card.className = 'case-link';
         card.href = item.url;
-        card.innerHTML = `
-          <h3 class="case-title">${item.title}</h3>
-          <p class="case-desc">${item.description}</p>
-          <span class="case-cta">Read article →</span>
-        `;
+        card.innerHTML = `<h3 class="case-title">${item.title}</h3>
+                          <p class="case-desc">${item.description}</p>
+                          <span class="case-cta">Read article →</span>`;
         container.appendChild(card);
       });
     });
